// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Input Input addonVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-addon t-addon--prepend"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请输入内容"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    
  </div>
  <div
    class="t-addon t-addon--append"
  >
    
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请输入内容"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <span
      class="t-addon__append"
    >
      .com
    </span>
  </div>
  <div
    class="t-addon t-addon--prepend t-addon--append"
  >
    <span
      class="t-addon__prepend"
    >
      http://
    </span>
    <div
      class="t-input__wrap"
    >
      <div
        class="t-input"
      >
        <!---->
        <!---->
        <input
          class="t-input__inner"
          placeholder="请输入内容"
          type="text"
        />
        <!---->
        <!---->
        <!---->
      </div>
      <!---->
    </div>
    <span
      class="t-addon__append"
    >
      .com
    </span>
  </div>
</div>
`;

exports[`Input Input alignVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 300px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-center"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-align-right"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input autoWidthVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-input--auto-width"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <span
        class="t-input__input-pre"
      >
        宽度自适应
      </span>
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input baseVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
    modelvalue="有默认值"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入内容（有默认值）"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <!---->
      <div
        class="t-input__prefix"
      >
        价格：
      </div>
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <div
        class="t-input__suffix"
      >
        元
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input clearableVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
    modelvalue="Hello TDesign"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input focusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input formatVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
    modelvalue=""
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入数字"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    
  </div>
</div>
`;

exports[`Input Input groupVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div>
    <div
      class="t-input-group t-input-group--separate"
    >
      
      <div
        class="t-input__wrap"
        style="width: 100px;"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div>
    <div
      class="t-input-group t-input-group--separate"
    >
      
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div>
    <div
      class="t-input-group"
    >
      
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input__wrap"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
  <div>
    <div
      class="t-input-group t-input-group--separate"
    >
      
      <div
        class="t-input__wrap"
        style="width: 100px;"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <span
        style="line-height: 32px;"
      >
         - 
      </span>
      <div
        class="t-input__wrap"
        style="width: 100px;"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input__wrap"
        style="width: 100px;"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      <div
        class="t-input__wrap"
        style="width: 100px;"
      >
        <div
          class="t-input"
        >
          <!---->
          <!---->
          <input
            class="t-input__inner"
            placeholder="请输入"
            type="text"
          />
          <!---->
          <!---->
          <!---->
        </div>
        <!---->
      </div>
      
    </div>
  </div>
</div>
`;

exports[`Input Input maxLengthCountVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
    modelvalue=""
  >
    <div
      class="t-input t-input--suffix"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        maxlength="5"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <div
        class="t-input__suffix"
      >
        0/5
      </div>
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input passwordVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
        
      </span>
      <!---->
      <input
        autocomplete="on"
        class="t-input__inner"
        placeholder="请输入"
        type="password"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-icon t-icon-browse-off t-input__suffix-clear"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <!---->
  </div>
  <!-- 使用 function 的形式定义 icon -->
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-input--prefix t-input--suffix"
    >
      <span
        class="t-input__prefix t-input__prefix-icon"
      >
        <svg
          class="t-icon t-icon-lock-on"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M6 10v1h4v-1H6z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M4.5 5v1H3a.5.5 0 00-.5.5v7c0 .28.22.5.5.5h10a.5.5 0 00.5-.5v-7A.5.5 0 0013 6h-1.5V5a3.5 3.5 0 00-7 0zm6 1h-5V5a2.5 2.5 0 015 0v1zm-7 1h9v6h-9V7z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
      <!---->
      <input
        autocomplete="on"
        class="t-input__inner"
        placeholder="请输入"
        type="password"
      />
      <!---->
      <!---->
      <span
        class="t-input__suffix t-input__suffix-icon"
      >
        <svg
          class="t-icon t-icon-browse-off t-input__suffix-clear"
          fill="none"
          height="1em"
          viewBox="0 0 16 16"
          width="1em"
        >
          <path
            d="M10.77 11.98l1.38 1.37.7-.7-9.7-9.7-.7.7 1.2 1.21a7.9 7.9 0 00-2.53 2.91L1 8l.12.23a7.72 7.72 0 009.65 3.75zM10 11.2A6.67 6.67 0 012.11 8c.56-1 1.34-1.83 2.26-2.43l1.08 1.09a2.88 2.88 0 003.9 3.9l.64.64zM6.21 7.42l2.37 2.37a1.88 1.88 0 01-2.37-2.37zM14.88 8.23L15 8l-.12-.23a7.73 7.73 0 00-9.35-3.86l.8.8A6.7 6.7 0 0113.9 8a6.87 6.87 0 01-2.02 2.26l.7.7a7.9 7.9 0 002.3-2.73z"
            fill="currentColor"
            fill-opacity="0.9"
          />
          <path
            d="M10.88 8c0 .37-.07.73-.2 1.06l-.82-.82.02-.24a1.88 1.88 0 00-2.12-1.86l-.82-.82A2.87 2.87 0 0110.88 8z"
            fill="currentColor"
            fill-opacity="0.9"
          />
        </svg>
      </span>
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input sizeVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-l"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-size-s"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入内容"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
</div>
`;

exports[`Input Input statusVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-disabled"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        disabled=""
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-readonly"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        readonly=""
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <br />
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-success"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-warning"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-error"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <!---->
  </div>
  <br />
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-input__tips t-input__tips--normal"
    >
      这是普通文本提示
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-success"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-input__tips t-input__tips--success"
    >
      校验通过文本提示
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-warning"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-input__tips t-input__tips--warning"
    >
      校验不通过文本提示
    </div>
  </div>
  <div
    class="t-input__wrap"
  >
    <div
      class="t-input t-is-error"
    >
      <!---->
      <!---->
      <input
        class="t-input__inner"
        placeholder="请输入"
        type="text"
      />
      <!---->
      <!---->
      <!---->
    </div>
    <div
      class="t-input__tips t-input__tips--error"
    >
      校验存在严重问题文本提示
    </div>
  </div>
</div>
`;

exports[`Input Input textareaVue demo works fine 1`] = `
<div
  class="tdesign-demo-block-column"
  style="max-width: 500px;"
>
  <h5>
    文本域输入框已抽离为单独组件，更多示例请参考 Textarea 组件
  </h5>
  <div
    class="t-textarea"
  >
    <textarea
      class="t-textarea__inner narrow-scrollbar"
      placeholder="请输入内容"
    />
    <!---->
    <!---->
    <!---->
  </div>
</div>
`;
